--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,5 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel=stylesheet href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/styles.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/pallets.css') }}">
 <link rel="stylesheet" href="{{ url_for('pygments_css') }}">
 <title>Pallets</title>
